--- a/public/css/seller-style.css
+++ b/public/css/seller-style.css
@@ -6,9 +6,9 @@
     height: 90vh;
 }
 .overview-ikb {
-    border-radius: 15px;
-    box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
-    padding: 10px 30px 40px 30px;
+    /* border-radius: 15px; */
+    /* box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3); */
+    /* padding: 10px 30px 40px 30px; */
     margin-top: 50px;
 }
 
@@ -28,6 +28,9 @@
 }
 
 /* CARD BENIH */
+.cardBenih img {
+    height: 200px !important;
+}
 .cardBenih:hover {
     box-shadow: 1px 1px 8px rgba(30, 130, 76, 1);
     transform: translateY(-5px);
@@ -55,9 +58,9 @@
         height: max-content;
     }
     .overview-ikb {
-        border-radius: 0;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
-        /* padding: 10px; */
+        /* border-radius: 0;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3); */
+        padding: 10px;
         margin-top: 15px;
     }
     .overview-ikb h4 {
@@ -80,8 +83,8 @@
         height: max-content;
     }
     .overview-ikb {
-        border-radius: 0;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+        /* border-radius: 0;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3); */
         /* padding: 10px; */
         margin-top: 15px;
     }
@@ -121,8 +124,8 @@
         height: 90vh;
     }
     .overview-ikb {
-        border-radius: 15px;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+        /* border-radius: 15px;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3); */
         /* padding: 10px; */
         margin-top: 35px;
     }
@@ -147,8 +150,8 @@
         height: 90vh;
     }
     .overview-ikb {
-        border-radius: 15px;
-        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3);
+        /* border-radius: 15px;
+        box-shadow: 1px 1px 10px rgba(0, 0, 0, 0.3); */
         /* padding: 10px; */
         margin-top: 35px;
     }
