Auth and Keranjang Fix

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -56,7 +56,8 @@ article, aside, figcaption, figure, footer, header, hgroup, main, nav, section {
 
 body {
   margin: 0;
-  font-family: "Nunito", sans-serif;
+  /* font-family: "Nunito", sans-serif; */
+  font-family: "Roboto", sans-serif;
   font-size: 0.9rem;
   font-weight: 400;
   line-height: 1.6;
@@ -2498,7 +2499,7 @@ fieldset:disabled a.btn {
 
 .btn-success {
   color: #fff;
-  background-color: #38c172;
+  background-color: #198754;
   border-color: #38c172;
 }
 .btn-success:hover {
@@ -6121,7 +6122,10 @@ button.bg-secondary:focus {
 }
 
 .bg-success {
-  background-color: #38c172 !important;
+    /* TEMPLATE DEFAULT GREEN */
+  /* background-color: #38c172 !important; */
+  background-color: #198754 !important;
+
 }
 
 a.bg-success:hover, a.bg-success:focus,
