Add Password and Rekening View, fix update profile User

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -102,6 +102,12 @@ main {
 .footer ul {
     list-style: none;
 }
+
+/* TABEL WIDTH */
+.table tr th:nth-child(4) {
+    width: 20%;  /*Custom your width*/
+ }
+
 /* Small devices (landscape phones, 576px and up) */
 @media (max-width: 576px) {
     main {
